[gd_scene load_steps=8 format=3 uid="uid://cb2ifycslt7xj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7un6q"]
[ext_resource type="Texture2D" uid="uid://bbbhej0k8yjsu" path="res://graphics/ship/playerShip1_red.png" id="1_ujcue"]
[ext_resource type="AudioStream" uid="uid://8bbvmvh6lik0" path="res://audio/laser.wav" id="3_ngm3h"]
[ext_resource type="AudioStream" uid="uid://bgu76ysx82j2w" path="res://audio/damage.ogg" id="4_ogooq"]

[sub_resource type="Gradient" id="Gradient_k7os4"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_haum0"]
gradient = SubResource("Gradient_k7os4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_reg7y"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 11.85
gravity = Vector3(0, 20, 0)
scale_min = 0.0
scale_max = 9.84
color = Color(1, 0, 0.00784314, 1)
color_ramp = SubResource("GradientTexture1D_haum0")

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_7un6q")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 40)
process_material = SubResource("ParticleProcessMaterial_reg7y")
lifetime = 0.5

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("1_ujcue")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-9, -38, 8, -38, 12, -13, 36, 1, 46, -6, 49, -5, 46, 24, 42, 23, 41, 20, 36, 24, 14, 27, 8, 37, -8, 37, -14, 28, -37, 23, -41, 20, -44, 25, -47, 22, -49, -5, -46, -7, -41, 0, -36, 1, -12, -12)

[node name="LaserStartPosition" type="Marker2D" parent="."]
position = Vector2(0, -57)

[node name="LaserCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Audio" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_ngm3h")

[node name="Damage" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("4_ogooq")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
